compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__bit_arrays__non_byte_aligned_size_calculation.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/bit_arrays.rs
assertion_line: 306
expression: "\npub fn main() {\n  case <<>> {\n    <<a:1, b:3, c:size(b - 2)>> -> c + b\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  case <<>> {
    <<a:1, b:3, c:size(b - 2)>> -> c + b
    _ -> 1
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    case <<>> of
        <<A:1, B:3, C:(B - 2)>> ->
            C + B;

        _ ->
            1
    end.
