compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__bit_arrays__operator_in_pattern_size2.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/bit_arrays.rs
assertion_line: 272
expression: "\npub fn main() {\n  let assert <<len, payload:size(len / 8 - 1)>> = <<>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let assert <<len, payload:size(len / 8 - 1)>> = <<>>
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> bitstring().
main() ->
    _assert_subject = <<>>,
    case _assert_subject of
        <<Len, Payload:(Len div 8 - 1)>> -> _assert_subject;
        _assert_fail ->
            erlang:error(#{gleam_error => let_assert,
                        message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                        file => <<?FILEPATH/utf8>>,
                        module => <<"my/mod"/utf8>>,
                        function => <<"main"/utf8>>,
                        line => 3,
                        value => _assert_fail,
                        start => 19,
                        'end' => 71,
                        pattern_start => 30,
                        pattern_end => 64})
    end.
